Make sure the agree button on the terms of service agreement is visible on small screens.

--- a/src/main/resources/scss/_nti-welcome.scss
+++ b/src/main/resources/scss/_nti-welcome.scss
@@ -58,7 +58,8 @@
 	}
 }
 
-.guide-window {
+.guide-window,
+.tos-window {
 	max-height: 100vh;
 
 	.x-window-item {
